<resources>
    <string name="app_name">One To One</string>
    <string name="api_key">AIzaSyAvUYjrkFeqR1GYZ4KGkmM5KOiIPR0CRp4</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="profile_pic_description">User profile pic</string>
    <string name="profile_pic_description_chosen">User chosen profile pic</string>
    <string name="activity_button_description">Activities button</string>

    <string name="what_do_you_like_to">Would you like to have</string>
    <string name="hey">Hey,</string>
    <string name="name_invited">Name</string>

    <string name="add_location">Specify place?</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="morning">Breakfast</string>
    <string name="half_morning">Half morning</string>
    <string name="lunch">Lunch</string>
    <string name="after_lunch">After lunch</string>
    <string name="afternoon">Afternoon</string>
    <string name="before_dinner">Before Dinner</string>
    <string name="dinner">Dinner</string>
    <string name="after_dinner">After dinner</string>
    <string name="sorry_tomorrow">You can\'t for today. What about tomorrow?</string>
    <string name="at">at</string>

    <string name="with">With</string>
    <string name="location_chosen">Location</string>
    <string name="address">Address</string>
    <string name="day">Date</string>
    <string name="time">Time</string>
    <string name="button_done">Send invite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="type_friends_email">Type your friend\'s email</string>
    <string name="add">Add</string>
    <string name="user">user</string>

    <string name="accept">Yes!</string>
    <string name="sorry_cant">Sorry, I can\'t</string>
    <string name="waiting_for_answer">Waiting for an answer</string>
    <string name="broadcast_name">com.gabrielemaffoni.toastapp.android.action.broadcast</string>

    <string name="user_not_found">User not found. Please, check again.</string>
    <!-- Strings related to Preference -->
    <string name="pref_file_name">preferences</string>
    <string name="pref_account">Account</string>
    <string name="pref_email">Email</string>
    <string name="pref_email_summary">Change your email</string>

    <string name="pref_password">Change your password</string>

    <string name="pref_profile">Your profile</string>
    <string name="pref_avatar">Your avatar</string>

    <string name="pref_name">Name</string>
    <string name="pref_name_summary">Change your name</string>

    <string name="pref_surname">Surname</string>
    <string name="pref_surname_summary">Change your surname</string>

    <string name="pref_view">Personalise your app</string>
    <string name="pref_color">Change the color</string>


    <string-array name="avatars">
        <item>@drawable/ic_user</item>
        <item>@drawable/ic_avatar_02</item>
        <item>@drawable/ic_avatar_03</item>
        <item>@drawable/ic_avatar_04</item>
        <item>@drawable/ic_avatar_05</item>
    </string-array>

    <!--On long press menu-->
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="invite">Send an invitation</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
