<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.v7.widget.CardView
        android:id="@+id/total_card_notif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/colorGrey"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:id="@+id/what_with_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/what_notif"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/activity_button_description"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/with_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/with" />

                <ImageView
                    android:id="@+id/receiver_notif"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_pic_description_chosen"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_when_notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/white"
                android:elevation="0dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/when_notif"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"

                    >

                    <TextView
                        android:id="@+id/day_notif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day" />

                    <TextView
                        android:id="@+id/time_notif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/where_map_notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/map_if_location_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/map_picked_conf_notif"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />

                    <TextView
                        android:id="@+id/where_name_notif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/location_chosen" />

                    <TextView
                        android:id="@+id/where_address_notif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/address" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/buttons_event_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/accept_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:elevation="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/accept" />

                <Button
                    android:id="@+id/sorry_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorRed"
                    android:elevation="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/sorry_cant" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>