<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container_upper"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/upper_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hey"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/profile_pic_chosen"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/profile_pic_description_chosen"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/name_invited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/name_invited"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        </LinearLayout>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp"
        android:elevation="0dp">

    </android.support.v4.view.ViewPager>

    <include
        android:id="@+id/preconfirmation_layout"
        layout="@layout/preconfirmation"
        android:visibility="gone" />

</RelativeLayout>