<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:id="@+id/what"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/when_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorGrey"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp">


        <LinearLayout
            android:id="@+id/choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/day_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:id="@+id/day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:tabGravity="center">

                    <android.support.design.widget.TabItem
                        android:id="@+id/today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomorrow" />

                </android.support.design.widget.TabLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:tabGravity="center"
                    app:tabMode="scrollable">

                    <android.support.design.widget.TabItem
                        android:id="@+id/item1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Item 1" />

                </android.support.design.widget.TabLayout>

            </LinearLayout>

            <Switch
                android:id="@+id/add_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_location" />

            <LinearLayout
                android:id="@+id/map_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:visibility="invisible">


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    map:cameraZoom="13"
                    map:liteMode="true"
                    map:mapType="normal" />

                <TextView
                    android:id="@+id/name_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/address_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="16dp"
            app:backgroundTint="@android:color/white"
            app:elevation="8dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_tick" />
    </android.support.v7.widget.CardView>

</RelativeLayout>